# ThermalMLite

./: .gitignore  Compare_Facenet_ArcFace.ipynb  README.md  Writing_Reading_Tfrecord.ipynb  camera.py  camera_seek.py  camera_seek_with_fr.py  face_detection.py  face_recog.py  heat_dist_predictor.h5  install.sh  known_names.pickle  main.py  model_1.h5  object_tracker.py  reboot.sh  register.py  restart_server.sh  run.sh  run_main.sh  seek.py  seekware-simple  shutdown.sh  start_tensorflow_serving.sh  thermal.py  thermalm.desktop  thermography.csv  validation_encodings.pickle
MaskTheFace/: requirements.txt
Seekware_SDK_3.6.0.0/: CREDITS.txt  LICENSE.txt  README.txt
Seekware_SDK_3.6.0.0/examples/: CMakeLists.txt
Seekware_SDK_3.6.0.0/examples/seekware-fbdev/: CMakeLists.txt  Makefile
Seekware_SDK_3.6.0.0/examples/seekware-fbdev/src/: seekware-fbdev.c
Seekware_SDK_3.6.0.0/examples/seekware-sdl/src/: seekware-sdl.c
Seekware_SDK_3.6.0.0/examples/seekware-simple/: Makefile
Seekware_SDK_3.6.0.0/examples/seekware-simple/src/: seekware-simple.c
Seekware_SDK_3.6.0.0/examples/seekware-upgrade/: CMakeLists.txt  Makefile
Seekware_SDK_3.6.0.0/examples/seekware-upgrade/src/: seekware-upgrade.c
data/1-12-2020/: 1606786593.6146033.csv
data/1-7-2020/: 1593591785.9063404.csv  1593592673.8630712.csv  1593595334.307592.csv  1593596982.8340862.csv  1593653950.2710316.csv
data/11-12-2020/: 1607671484.2412803.csv  1607671653.5340052.csv
data/12-10-2020/: 1602473018.1216414.csv  1602473043.8184183.csv  1602473067.3977454.csv  1602473086.842892.csv  1602473104.69071.csv  1602473128.4286854.csv  1602473155.931374.csv  1602473181.6938515.csv  1602473220.1308308.csv  1602473233.7590547.csv  1602473258.608664.csv  1602473284.3288758.csv  1602473307.6614997.csv  1602473331.7496994.csv  1602473347.3152876.csv  1602473441.0517895.csv  1602473521.969661.csv  1602473548.3249571.csv  1602473582.046866.csv  1602473609.0484478.csv  1602473633.0054288.csv  1602473658.6662855.csv  1602473942.3041952.csv  1602474009.070366.csv  1602474037.5270243.csv  1602474064.4156146.csv  1602474094.1381967.csv  1602474221.9431717.csv  1602474320.6377966.csv  1602474408.281214.csv  1602474448.8837068.csv  1602474480.1788151.csv  1602474512.6710265.csv  1602474654.5952.csv
data/12-6-2020/: 1591947054.987835.csv  1591947916.224991.csv  1591947934.269967.csv  1591948171.770214.csv  1591948267.2962065.csv  1591948376.3167317.csv  1591948640.1911802.csv  1591957094.1025758.csv  1591957463.6377451.csv  1591957521.481753.csv  1591957579.09492.csv  1591957615.1570132.csv  1591960436.9434307.csv  1592019336.3449662.csv  1592020778.482066.csv  1592023716.0574505.csv  1592027476.6484628.csv  1592028567.6368108.csv
data/13-11-2020/: 1605231807.8402138.csv  1605231852.627848.csv  1605231879.9451158.csv
data/13-7-2020/: 1594613501.5048282.csv  1594613889.760499.csv  1594614237.3729262.csv  1594619409.8068738.csv  1594619453.966595.csv  1594619505.8350544.csv  1594619555.0066378.csv  1594619569.6157684.csv  1594619623.1294923.csv  1594619645.6570168.csv  1594619736.7281175.csv  1594619831.4234886.csv  1594619846.7306004.csv  1594619993.5329232.csv  1594620050.0822072.csv  1594620083.4920564.csv  1594620144.19352.csv  1594620164.462468.csv  1594620182.3234317.csv  1594620192.3583596.csv  1594620205.7404788.csv  1594620235.287672.csv  1594620271.0795224.csv  1594620314.6689274.csv  1594620327.4051406.csv  1594620337.8197048.csv  1594620522.9911742.csv  1594620542.430306.csv  1594620553.6848216.csv  1594620570.0568733.csv  1594620630.572349.csv  1594620714.026501.csv  1594620733.3947556.csv  1594620776.5739236.csv  1594620862.2595522.csv  1594621043.259805.csv  1594621128.7691634.csv  1594621237.353826.csv  1594621277.8054802.csv  1594621350.4745505.csv  (+45 more)
data/14-7-2020/: 1594705413.810169.csv  1594705526.836892.csv  1594705543.9355042.csv  1594705562.2551894.csv  1594705583.5006328.csv  1594705599.1897051.csv  1594705600.5644343.csv  1594705619.0697799.csv  1594705635.8380163.csv  1594705651.6215436.csv  1594705666.3041055.csv  1594705681.6975052.csv  1594705693.190808.csv  1594705706.8626328.csv  1594705727.179541.csv  1594705743.2116938.csv  1594705759.1630285.csv  1594706100.9619.csv  1594706116.6485837.csv  1594706129.082665.csv  1594706142.6184857.csv  1594706153.5693426.csv  1594706167.1196792.csv  1594706181.2354956.csv  1594706197.6979167.csv  1594706216.4113693.csv  1594706233.541802.csv  1594706265.4859655.csv  1594706282.1316595.csv  1594706294.315805.csv  1594706315.851068.csv  1594706339.8234532.csv  1594706362.1268387.csv  1594706758.4113946.csv  1594706777.4789057.csv  1594713254.894435.csv
data/15-11-2020/: 1605403940.6303034.csv  1605404105.4689236.csv  1605404290.5676913.csv  1605404581.3667846.csv  1605404657.65682.csv  1605406907.393846.csv  1605406926.0950596.csv  1605407545.030839.csv  1605407641.7831826.csv  1605409739.632448.csv  1605410504.914546.csv  1605410845.8347917.csv  1605412001.0536091.csv  1605412205.4245744.csv  1605412333.435675.csv  1605412369.1020722.csv  1605412396.7201295.csv  1605412432.7660694.csv  1605412491.8934987.csv  1605412526.3232749.csv  1605412913.4185855.csv  1605412931.3021924.csv  1605413893.8386827.csv  1605413914.140256.csv  1605413947.3031485.csv  1605414972.2111876.csv  1605415417.7420185.csv  1605415540.068267.csv  1605415585.66532.csv  1605415727.6374815.csv  1605415817.245729.csv  1605415942.2812366.csv  1605415960.1158764.csv  1605415980.3293927.csv  1605416074.70631.csv  1605416208.6834273.csv  1605416320.2176816.csv  1605416347.165901.csv  1605416439.438126.csv  1605416466.4583333.csv  (+67 more)
documents/: UserManualTemplate.docx
fr/: __init__.py  export_model.py  mask_utils.py  models.py
include/: seekware.h
lib/: libseekware.so.3.4  libseekware.so.3.8
static/: data_16-6-2020_10_39_10_42.csv  data_17-6-2020_11_10_9_58.csv  data_26-10-2020_10:38_10:43.csv  data_4-7-2020_0_44_0_46.csv  data_7-10-2020_14:58_15:1.csv  data_7-10-2020_14:58_15:14.csv  data_7-7-2020_9_58_10_22.csv
templates/: index.html
test/: seek.py  seekware-simple  thermography.csv
(+1187 files in other folders)
